# WaterQuality

./: .gitignore  CMakeLists.txt  README.md  aquawatch_ar.ts  aquawatch_de.ts
buile/: CMakeCache.txt  cmake_install.cmake  water
buile/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
buile/water_autogen/: deps  mocs_compilation.cpp
buile/water_autogen/UVLADIE3JM/: moc_basepage.cpp.d  moc_dashboardpage.cpp.d  moc_litterpage.cpp.d  moc_mainwindow.cpp.d  moc_navigationbar.cpp.d
src/: basepage.cpp  basepage.h  compliance.cpp  compliance.h  compliancedashboard.cpp  compliancedashboard.h  dashboardpage.cpp  dashboardpage.h  datapage.cpp  datapage.h  dataset.cpp  dataset.h  examplepage.cpp  examplepage.h  fluorinatedcompounds-mapdisplay.qml  fluorinatedcompounds.cpp  fluorinatedcompounds.h  languagemanager.h  litterpage.cpp  litterpage.h  main.cpp  mainwindow.cpp  mainwindow.h  model.cpp  model.h  navigationbar.cpp  navigationbar.h  popspage.cpp  popspage.h  qualitysample.cpp  qualitysample.h  resources.qrc  styles.cpp  styles.h  trendsoverview.cpp  trendsoverview.h
src/styles/: basepage.qss  compliancedashboard.qss  dashboard.qss  datapage.qss  fluorinatedcompounds.qss  litter.qss  main.qss  navigation.qss  popspage.qss  trendsoverview.qss
